base de formulario

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -61,7 +61,6 @@ nav a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 500px;
 }
 
 form {
@@ -75,5 +74,12 @@ form {
 	flex-direction: column;
 	width: 100%;
 	margin: 10px 0;
+	text-align: center;
+}
+
+.input-group-row {
+	display: flex;
+	margin: 10px 0;
+	justify-content: space-around;
 	text-align: center;
 }
