--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,16 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
 	margin: 0;
 	padding: 0;
-	font-family: Poppins;
+	font-family: 'Montserrat', sans-serif;
 	box-sizing: border-box;
 }
 
 body {
-	max-width: 1200px;
+	
 	margin: 0 auto;
 }
 
@@ -15,7 +19,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 
-	padding: 15px;
+	padding: 5px;
 	background-color: #697ec2;
 	color: #fff;
 }
