--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
+body {
 	background-image: linear-gradient(to top, var(--tw-gradient-stops));
 	--tw-gradient-from: #70348c var(--tw-gradient-from-position);
     --tw-gradient-to: rgb(250 204 21 / 0) var(--tw-gradient-to-position);
     --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 	--tw-gradient-to: #585ca4 var(--tw-gradient-to-position);
+	background-attachment: fixed;
 }
 
 * {
@@ -15,66 +16,4 @@
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
 	box-sizing: border-box;
-}
-
-body {
-	
-	margin: 0 auto;
-}
-
-
-
-.user {
-	display: flex;
-	align-items: center;
-	gap: 20px;
-}
-
-
-.btn-logout {
-	border: 1px solid #fff;
-	background: none;
-	color: #fff;
-	padding: 5px 20px;
-	border-radius: 6px;
-	cursor: pointer;
-}
-
-.btn-logout:hover {
-	background-color: #fff;
-	color: #000;
-}
-
-/*  */
-
-.wrapper {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-form {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-}
-
-.input-group {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	margin: 10px 0;
-	text-align: center;
-}
-
-.input-group-row {
-	display: flex;
-	margin: 10px 0;
-	justify-content: space-around;
-	text-align: center;
-}
-
-.imgs{
-	width: 1000px;
-	height: 500px;
 }
